--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,20 @@
 		<version>3.1.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.experiment</groupId>
 	<artifactId>generative-ai-experiment</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
 	<name>generative-ai-experiment</name>
-	<description>Antosha&apos;s generative AI experimental project</description>
+	<description>Antosha's generative AI experimental project</description>
+
 	<properties>
 		<java.version>17</java.version>
+		<sonar.organization>antosha-organization</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
